--- a/voter-program/JsonBasedVoting/build.xml
+++ b/voter-program/JsonBasedVoting/build.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <!-- You may freely edit this file. See commented blocks below for -->
 <!-- some examples of how to customize the build. -->
 <!-- (If you delete it and reopen the project it will be recreated.) -->
@@ -6,8 +7,8 @@
 <!-- the Compile on Save feature is turned off for the project. -->
 <!-- You can turn off the Compile on Save (or Deploy on Save) setting -->
 <!-- in the project's Project Properties dialog box.-->
-<project name="voter-program-thingy" default="default" basedir=".">
-    <description>Builds, tests, and runs the project voter-program-thingy.</description>
+<project name="JsonBasedVoting" default="default" basedir=".">
+    <description>Builds, tests, and runs the project JsonBasedVoting.</description>
     <import file="nbproject/build-impl.xml"/>
     <!--
 
@@ -57,7 +58,7 @@
 
     An example of overriding the target for project execution could look like this:
 
-        <target name="run" depends="voter-program-thingy-impl.jar">
+        <target name="run" depends="JsonBasedVoting-impl.jar">
             <exec dir="bin" executable="launcher.exe">
                 <arg file="${dist.jar}"/>
             </exec>
