--- a/voter-program/JsonBasedVoting/nbproject/project.properties
+++ b/voter-program/JsonBasedVoting/nbproject/project.properties
@@ -1,10 +1,9 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
+annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
-application.title=voter-program-thingy
-application.vendor=Sam Ramirez
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -25,13 +24,14 @@ debug.test.classpath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/voter-program-thingy.jar
+dist.jar=${dist.dir}/JsonBasedVoting.jar
 dist.javadoc.dir=${dist.dir}/javadoc
-endorsed.classpath=
 excludes=
+file.reference.json-simple-1.1.1.jar=D:\\College\\java-libraries\\json-simple-1.1.1.jar
 includes=**
-jar.compress=true
-javac.classpath=
+jar.compress=false
+javac.classpath=\
+    ${file.reference.json-simple-1.1.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -56,7 +56,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=voter.program.thingy.VoterProgramThingy
+main.class=jsonbasedvoting.JsonBasedVoting
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
