--- a/restaurant-program/diner-program-dev/config.ini
+++ b/restaurant-program/diner-program-dev/config.ini
@@ -1,6 +1,6 @@
 [email]
-from_address = notificationblender.samramirez@gmail.com
-password = 48n4AV5^fr8u
+from_address = NULL
+password = NULL
 reply_to = customercare@idontcare.com
 header_img = https://i.pinimg.com/originals/08/ce/15/08ce15a8350200ea5fbf7c73bda914c9.png
 sign_off = Icebear
